# DCENT_OS

./: CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  TESTING.md  THIRD_PARTY_NOTICES.md
DCENT_OS_Antminer/dcentrald/: Cargo.toml  Dockerfile.cross  build_arm.bat  build_arm.sh  dcentrald-s19pro.toml  dcentrald.toml  dcentrald_coldboot_s82.toml  dcentrald_passthrough_s82.toml  dcentrald_proxy.toml.example  dcentrald_s19.toml  dcentrald_s19j.toml  dcentrald_s19j_hybrid.toml  dcentrald_s19jpro_am2.toml  dcentrald_s19jpro_am2_overlay.toml  dcentrald_s19k.toml  dcentrald_s19pro.toml  dcentrald_s19xp.toml  dcentrald_s21.toml  dcentrald_s21pro.toml  dcentrald_s21xp.toml  dcentrald_stock.toml  deny.toml  rust-toolchain.toml  zig-ar-aarch64.bat  zig-ar-arm.bat  zig-cc-aarch64.bat  zig-cc-aarch64.py  zig-cc-arm.bat  zig-cc-arm.py
DCENT_OS_Antminer/dcentrald/.cargo/: config.toml
DCENT_OS_Antminer/dcentrald/configs/: dcentrald_diag_chain4.toml  dcentrald_proxy.toml  dcentrald_s15.toml  dcentrald_s17.toml  dcentrald_s17plus.toml  dcentrald_s17pro.toml  dcentrald_s17pro_am2_baked_default.toml  dcentrald_s19jpro_am2_baked_default.toml  dcentrald_s19jpro_am2_chain4_native.toml  dcentrald_s19jpro_xil.toml  dcentrald_s19jpro_xil_baked_default.toml  dcentrald_s19jpro_xil_override.toml  dcentrald_s19pro_am2_baked_default.toml  dcentrald_t15.toml  dcentrald_t17.toml  dcentrald_t17plus.toml  dcentrald_t19.toml
DCENT_OS_Antminer/dcentrald/dcentos-init/: Cargo.toml
DCENT_OS_Antminer/dcentrald/dcentos-init/src/: main.rs
DCENT_OS_Antminer/dcentrald/dcentrald/: Cargo.toml
DCENT_OS_Antminer/dcentrald/dcentrald-api/: Cargo.toml
DCENT_OS_Antminer/dcentrald/dcentrald-api-grpc/: Cargo.toml  build.rs
DCENT_OS_Antminer/dcentrald/dcentrald-api-grpc/proto/: dcent_v1.proto
DCENT_OS_Antminer/dcentrald/dcentrald-api-grpc/src/: constraints.rs  lib.rs
DCENT_OS_Antminer/dcentrald/dcentrald-api-types/: Cargo.toml
DCENT_OS_Antminer/dcentrald/dcentrald-api-types/src/: apw_dual_output.rs  asic_command.rs  asic_protocol_spec.rs  asic_register_map.rs  atm_stepper.rs  audit_log.rs  autotune_phase.rs  autotune_policy.rs  baud_switch.rs  bm1368_temperature.rs  bm1398_protocol.rs  bm13xx_pll.rs  boot_flow.rs  boot_orchestration.rs  boot_phase.rs  braiinsos_constraints.rs  braiinsos_cooling_mode.rs  braiinsos_dps_configuration.rs  braiinsos_grpc_catalog.rs  braiinsos_miner_status.rs  braiinsos_network_configuration.rs  braiinsos_proto_wire_types.rs  cgminer_catalog.rs  cgminer_status_codes.rs  chip_init.rs  cold_environment.rs  diode_voltage.rs  dspic_frame.rs  eeprom_record.rs  failure_mode.rs  firmware_boot_timeline.rs  firmware_stratum_matrix.rs  fpga_register_map.rs  frequency_scaling.rs  hashboard_diagnostics.rs  lib.rs  (+45 more)
DCENT_OS_Antminer/dcentrald/dcentrald-asic/: Cargo.toml
DCENT_OS_Antminer/dcentrald/dcentrald-autotuner/: Cargo.toml
DCENT_OS_Antminer/dcentrald/dcentrald-bridge/: Cargo.toml
DCENT_OS_Antminer/dcentrald/dcentrald-chip-analysis/: Cargo.toml
DCENT_OS_Antminer/dcentrald/dcentrald-common/: Cargo.toml
DCENT_OS_Antminer/dcentrald/dcentrald-diagnostics/: Cargo.toml
DCENT_OS_Antminer/dcentrald/dcentrald-fabric-lease/: Cargo.toml
DCENT_OS_Antminer/dcentrald/dcentrald-hal/: Cargo.toml
DCENT_OS_Antminer/dcentrald/dcentrald-re-catalog/: Cargo.toml
DCENT_OS_Antminer/dcentrald/dcentrald-silicon-profiles/: Cargo.toml
DCENT_OS_Antminer/dcentrald/dcentrald-stratum/: Cargo.toml
DCENT_OS_Antminer/dcentrald/dcentrald-thermal/: Cargo.toml
DCENT_OS_Antminer/dcentrald/fuzz/: Cargo.toml
DCENT_OS_Antminer/dcentrald/pic-recovery/: Cargo.toml
DCENT_OS_ESP/: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.eth-w5500
DCENT_OS_ESP/.cargo/: config.toml
DCENT_OS_ESP/dcentaxe/: Cargo.toml  build.rs
DCENT_OS_ESP/dcentaxe-asic/: Cargo.toml
DCENT_OS_ESP/dcentaxe-asic/src/: bm1366.rs  bm1368.rs  bm1370.rs  bm1373.rs  bm1397.rs  common.rs  crc.rs  kf1950.rs  lib.rs  pll.rs  serial.rs  test_utils.rs
DCENT_OS_ESP/dcentaxe-bap/: Cargo.toml
DCENT_OS_ESP/dcentaxe-bap/src/: handlers.rs  lib.rs  protocol.rs  subscription.rs  uart.rs
DCENT_OS_ESP/dcentaxe-core/: Cargo.toml
DCENT_OS_ESP/dcentaxe-core/src/: lib.rs
DCENT_OS_ESP/dcentaxe-hal/: Cargo.toml
DCENT_OS_ESP/dcentaxe-hal/src/: board.rs  cml_escalation.rs  display.rs  emc2103.rs  emc2302.rs  eth.rs  fan.rs  fan_pid.rs  gpio.rs  i2c.rs  lib.rs  lora_pins.rs  power.rs  power_convert.rs  safety.rs  temp.rs  temp_decode.rs  tps546_guard.rs  uart.rs
DCENT_OS_ESP/dcentaxe-lora/: Cargo.toml  README.md
DCENT_OS_ESP/dcentaxe-lora/src/: auth.rs  bitcoin.rs  config.rs  duty.rs  esp_hal.rs  flood.rs  gate.rs  gateway.rs  lib.rs  mcp.rs  mesh.rs  reassembly.rs  relay.rs  sx1262.rs
DCENT_OS_ESP/dcentaxe-mining/: Cargo.toml
DCENT_OS_ESP/dcentaxe-mining/src/: dispatcher.rs  lib.rs  stats.rs
DCENT_OS_ESP/dcentaxe-stratum/: Cargo.toml
DCENT_OS_ESP/dcentaxe-stratum-v2/: Cargo.toml
DCENT_OS_ESP/dcentaxe-stratum-v2/src/: channel.rs  client.rs  framing.rs  lib.rs  noise.rs  types.rs
DCENT_OS_ESP/dcentaxe-stratum/src/: address.rs  client.rs  gateway_solo.rs  lib.rs  mask.rs  mesh_solo.rs  solo.rs  types.rs  work.rs
DCENT_OS_ESP/dcentaxe-stratum/tests/: solo_share_hook.rs
DCENT_OS_ESP/dcentaxe/src/: api.rs  api_system_info.rs  auth.rs  autotuner.rs  bridge.rs  capabilities.rs  cgminer_tcp.rs  chip_profiles_bitaxe.rs  config.rs  dashboard.rs  derived_metrics.rs  eth_w5500.rs  lora_task.rs  main.rs  mcp.rs  mesh_solo_runtime.rs  metrics_render.rs  mqtt.rs  mqtt_ha.rs  net.rs  notifications.rs  nvs_config.rs  ota_signature.rs  power_measurement.rs  provisioning.rs  self_test.rs  shared.rs  swarm.rs  thermal_safety.rs  wifi.rs
DCENT_OS_ESP/docs/: BITAXE_FIRMWARE.md
DCENT_OS_ESP/releases/: README.md
DCENT_OS_ESP/scripts/: build-matrix.ps1  build-matrix.sh  ci_ban_gates.sh  package-firmware.ps1  package-firmware.sh  run_exact_cargo_test.sh  smoke-pool-truth.mjs  soak-dispatcher-metrics.ps1  test_ota_e2e.sh  test_run_exact_cargo_test.sh  verify_ota_package.py
(+1508 files in other folders)
