[package]
name = "dcentaxe-bap"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "BitAxe Accessory Protocol (BAP) server — NMEA-style UART link to Touch / Turbo Touch display boards"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
heapless = { version = "0.9", features = ["serde"] }

[features]
default = []
# Enables the ESP-IDF UART transport. Without this the crate stays pure-Rust
# (parser + subscription only) so host-side unit tests don't pull in esp-idf-sys.
esp-idf = ["dep:esp-idf-hal"]

[dependencies.esp-idf-hal]
version = "0.46"
optional = true
