[package]
name = "dcentaxe-stratum-v2"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Stratum V2 client for DCENT_axe (ESP32-S3)"

[dependencies]
log = "0.4"
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdh", "arithmetic"] }
rand_core = { version = "0.6", default-features = false }
# secp256k1 C bindings — native ElligatorSwift (BIP324) support for SV2 Noise handshake.
# Uses libsecp256k1 which is pure C89, should cross-compile to xtensa-esp32s3.
# If compilation fails on xtensa, fall back to pure-Rust EllSwift using k256.
secp256k1 = { version = "0.29", default-features = false, features = ["alloc"] }
