[package]
name = "dcentaxe-stratum"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Stratum V1 client for DCENT_axe — pool connection, job reception, share submission"

[dependencies]
# Serialization / JSON-RPC parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SHA-256 for midstate computation and coinbase hashing
sha2 = "0.10"

# Hex encoding/decoding
hex = "0.4"

# Logging
log = "0.4"

# TCP keepalive via setsockopt (POSIX / ESP-IDF lwIP)
[target.'cfg(unix)'.dependencies]
libc = "0.2"
