[package]
name = "dcentaxe"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "DCENT_axe — Clean-room BitAxe mining firmware"

[dependencies]
# ESP-IDF framework
esp-idf-sys = "0.37"
esp-idf-hal = "0.46"
esp-idf-svc = "0.52"
embedded-svc = "0.29"

# Shared cross-firmware schemas
# (path is relative to this manifest: ../../ reaches projects/ -> projects/dcent-schema.)
dcent-schema = { path = "../../shared/dcent-schema" }

# Logging
log = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
pbkdf2 = "0.12"
sha2 = "0.10"

# Fixed-size buffers for embedded use
heapless = { version = "0.9", features = ["serde"] }

# Workspace crates
dcentaxe-asic = { path = "../dcentaxe-asic" }
dcentaxe-hal = { path = "../dcentaxe-hal" }
dcentaxe-stratum = { path = "../dcentaxe-stratum" }
dcentaxe-mining = { path = "../dcentaxe-mining" }
dcentaxe-stratum-v2 = { path = "../dcentaxe-stratum-v2", optional = true }
dcentaxe-bap = { path = "../dcentaxe-bap", optional = true, features = ["esp-idf"] }
# On-board SX1262 LoRa radio + DCENT mesh — DEFAULT-OFF, per-board opt-in (the
# `lora` feature below). Pulls the esp-idf SPI3/HSPI transport (`esp-idf`
# feature). A non-LoRa SKU never compiles it → zero image bytes (protects the
# ~89%-full OTA slot). See dcentaxe-lora/README.md "Integration".
dcentaxe-lora = { path = "../dcentaxe-lora", optional = true, features = ["esp-idf"] }

[features]
default = ["bitaxe-gamma"]

# ── Sub-features (mirrored from HAL for #[cfg] in main.rs) ──
pins-bitaxe = ["dcentaxe-hal/pins-bitaxe"]
pins-nerd = ["dcentaxe-hal/pins-nerd"]
display-ssd1306 = ["dcentaxe-hal/display-ssd1306"]
display-none = ["dcentaxe-hal/display-none"]

# ── BitAxe family ──
bitaxe-max       = ["pins-bitaxe", "display-ssd1306", "dcentaxe-hal/power-ds4432u", "dcentaxe-hal/fan-emc2101"]
bitaxe-ultra     = ["pins-bitaxe", "display-ssd1306", "dcentaxe-hal/power-tps546",  "dcentaxe-hal/fan-emc2101"]
bitaxe-supra     = ["pins-bitaxe", "display-ssd1306", "dcentaxe-hal/power-tps546",  "dcentaxe-hal/fan-emc2101"]
bitaxe-gamma     = ["pins-bitaxe", "display-ssd1306", "dcentaxe-hal/power-tps546",  "dcentaxe-hal/fan-emc2101"]
bitaxe-gamma-duo = ["pins-bitaxe", "display-ssd1306", "dcentaxe-hal/power-tps546",  "dcentaxe-hal/fan-emc2101"]
bitaxe-gt        = ["pins-bitaxe", "display-ssd1306", "dcentaxe-hal/power-tps546",  "dcentaxe-hal/fan-emc2103"]
bitaxe-hex-ultra = ["pins-bitaxe", "display-ssd1306", "dcentaxe-hal/power-tps546",  "dcentaxe-hal/fan-emc2302"]
bitaxe-hex-supra = ["pins-bitaxe", "display-ssd1306", "dcentaxe-hal/power-tps546",  "dcentaxe-hal/fan-emc2302"]

# ── Nerd family ──
nerdnos          = ["pins-nerd", "display-none", "dcentaxe-hal/power-fixed",  "dcentaxe-hal/fan-none"]
nerdaxe          = ["pins-nerd", "display-none", "dcentaxe-hal/power-tps546", "dcentaxe-hal/fan-emc2101"]
nerdqaxe-plus    = ["pins-nerd", "display-none", "dcentaxe-hal/power-tps546", "dcentaxe-hal/fan-emc2101"]
nerdqaxe-pp      = ["pins-nerd", "display-none", "dcentaxe-hal/power-tps546", "dcentaxe-hal/fan-emc2101"]

# ── BitAxe Touch / Turbo Touch ──
# Touch = single BM1370 mining board + LVGL accessory. Electrically the same
# as Gamma; `bap` drives UART_NUM_2 (GPIO40 RX / GPIO39 TX) to the accessory.
# Turbo Touch = GT-801 mining board + accessory.
bap              = ["dep:dcentaxe-bap"]
bitaxe-touch     = ["bitaxe-gamma", "bap"]
bitaxe-gt-touch  = ["bitaxe-gt",    "bap"]

# ── DCENT_axe family (D-Central BM1397 SKUs) ──
# All three carry a TPS546D24A PMBus VRM (NO DS4432U, NO INA260 — verified from
# the dcent-axe-BM1397 schematic netlist, PREFAB R-10 / FULL_PREFAB_REVIEW
# 2026-07-11 M-6): Single pairs EMC2101, Quad/Hex pair EMC2302 dual fan. Every
# DCENT_axe board ships the BAP accessory header populated, so each pulls in
# `bap` like the Touch variants. (The power-*/fan-* HAL features are currently
# inert — zero #[cfg] consumers — but must still tell the truth about the board.)
dcent-axe-bm1397      = ["pins-bitaxe", "display-ssd1306", "dcentaxe-hal/power-tps546",  "dcentaxe-hal/fan-emc2101", "bap"]
dcent-axe-quad-bm1397 = ["pins-bitaxe", "display-ssd1306", "dcentaxe-hal/power-tps546",  "dcentaxe-hal/fan-emc2302", "bap"]
dcent-axe-hex-bm1397  = ["pins-bitaxe", "display-ssd1306", "dcentaxe-hal/power-tps546",  "dcentaxe-hal/fan-emc2302", "bap"]

# ── Protocol (orthogonal — combine with any board) ──
stratum-v2 = ["dcentaxe-stratum-v2"]

# ── On-board LoRa mesh (orthogonal — combine with any board; DEFAULT-OFF) ──
# Wires the committed dcentaxe-lora crate (SX1262 + $DCM mesh) into the binary:
# the radio task, the /mcp lora tools, and the dashboard mesh panel. Pulls the
# HAL `pins-lora` GPIO map. OFF by default so the `dcentaxe` binary is
# byte-identical to today unless a board explicitly opts in — a non-functional
# "LoRa" surface would be a lying UI (project  "no lying UI"). Verify
# against the `updateFitsSlot` OTA gate before shipping on a public board.
lora = ["dep:dcentaxe-lora", "dcentaxe-hal/pins-lora"]

# ── W5500 SPI-Ethernet "DCENT LAN Mod" (orthogonal — combine with any board;
# DEFAULT-OFF) ── PLAN-E Phase 1. Compiles the esp_eth W5500 bring-up seam
# (`eth_w5500.rs`), the pure Wi-Fi⇄Ethernet failover FSM (`net.rs`), and the
# HAL pin map (`dcentaxe-hal/eth`). OFF by default so the `dcentaxe` binary is
# byte-identical to today unless a board explicitly opts in — a non-functional
# "LAN" surface would be a lying UI (same radio-dark rule as `lora`). Runtime
# is FURTHER gated by `config.network.eth_enabled` (default false) and
# fail-closed by the `AccessoryMode::W5500Lan` guard (LAN xor BAP-Touch —
# W5500 SPI rides the BAP-UART pins GPIO39/40; LoRa is unaffected on its own
# SPI3 bus). BUILD REQUIREMENT: the ESP-IDF W5500 driver must be compiled in —
# build with ESP_IDF_SDKCONFIG_DEFAULTS="sdkconfig.defaults;sdkconfig.defaults.eth-w5500"
# (a compile_error! in eth_w5500.rs makes a missing overlay loud). Verify
# against the `updateFitsSlot` OTA gate before shipping on a public board.
eth-w5500 = ["dcentaxe-hal/eth-w5500"]

# ── Meshtastic interop (opt-in ON TOP of `lora`; DEFAULT-OFF) ──
# Lets a board run its SX1262 as a genuine Meshtastic Router (config-selected
# radio mode). Pulls the AES-CTR channel-crypto + protobuf stack in
# `dcentaxe-lora` — so a plain `$DCM`-only LoRa SKU pays ZERO AES bytes unless it
# opts in (RAM/OTA budget rule). The Meshtastic path in `lora_task` is
# `#[cfg(feature = "meshtastic")]`; runtime is further gated by the persisted
# `MeshConfig` mesh mode (default-OFF, dormant until provisioned — same posture
# as the `$DCM` owner-key gate). Verify against the `updateFitsSlot` OTA gate.
meshtastic = ["lora", "dcentaxe-lora/meshtastic-interop"]

# ── Research-only ASIC drivers (orthogonal — UNTESTED, default OFF) ──
# KF1950 (WhatsMiner K-series). Forwards to dcentaxe-asic + dcentaxe-mining.
#
asic-kf1950 = ["dcentaxe-asic/asic-kf1950", "dcentaxe-mining/asic-kf1950"]

[build-dependencies]
embuild = "0.33"
